fix: 修复base64报错，添加mssql数据源和vertica驱动